# CyberneticAgents

./: .coveragerc  .env.example  .env.planka.example  .env.taiga.example  .gitignore  .ignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  cyberneticagents_cron_worker.sh  docker-compose.cli-tools.yml  docker-compose.planka.yml  docker-compose.taiga.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: cli-tools-image.yml  openclaw-tools-image.yml  tests-parallel.yml
.zed/: settings.json
docs/: README.md  agent-cli-interaction-requirements.md  agent_cli_requirements.md  architecture_perfect_plan.md  discoverability.md  feature_breakdown.md  initial_project_requirements.md  openclaw_cyberagent_test.md  project_log.md  project_roadmap.md  relevant_references.md
docs/blog-posts/: 2026-02-01 introducing cybernetic agents.md  2026-02-08 Onboarding.md
docs/features/: agent_cli.md  agent_skills.md  communication_channels.md  dashboard.md  memory.md  message_routing.md  secret_management.md  shared_inbox.md  skill_permissions.md  speech_to_text.md  standard_operating_procedures.md  technical_onboarding.md  telegram_integration.md  telegram_onboarding.md
docs/planned_features/: OPENCLAW_INTEGRATION_PLAN.md  agent_skills.md  heartbeat_feature.md  memory.md  onboarding.md  onboarding_feature.md  openclaw_integration.md  secret_management.md  skill_permissions_prd.md  technical_onboarding.md  telegram_integration.md  triggers.md
docs/product_requirements/: communication_channels.md  continuous_product_discovery.md  cron_triggers.md  memory.md  message_routing.md  onboarding.md  pkm_integrations.md  triggers.md  (+5 more)
git-hooks/: pre-commit  pre-push
scripts/: README.md  automation_idle_monitor.sh  cron_cyberneticagents_worker.sh  cyberneticagents-project-worker.sh  cyberneticagents_project_worker.sh  execute_issue.sh  github_issue_queue.py  github_outbox.py  github_project_cache.py  gitlab_ci_failure_to_github_issue.sh  nightly-cyberneticagents.sh  nightly-cyberneticagents_codex.md  poll_ready_and_trigger.sh  project-worker.sh  quality_gate_codex.md  run_project_automation.sh  taiga_poc_bridge.py  usability.sh
src/: __init__.py  agent_utils.py  clarification_questions.py  cli_session.py  db_utils.py  enums.py  github_clarification.py  github_issue_queue.py  github_stage_events.py  github_stage_queue.py  init_db.py  llm_config.py  logging_utils.py  model_factory.py  policy_database.py  registry.py  runtime.py  team_state.py  ui_state.py
tests/: README.md  __init__.py  conftest.py  test_chat_comprehensive.py  test_chat_interface.py  test_cli_session.py  test_cyberagent_namespace.py  test_db_config.py  test_db_isolation.py  test_llm_config.py  test_logging_utils.py  test_main_cli.py  test_memory_test_isolation.py  test_model_factory.py  test_policy_database.py  test_policy_database_concurrency.py  test_pytest_worker_id.py  test_runtime.py  test_streamlit_async_fix.py  test_system_base_structured_message.py  test_team_state.py  test_thread_exception_tracker.py  test_ui_state.py  test_unified_compose_stack.py  test_vibe_ui_message_factory.py  test_workflow_permissions.py
(+508 files in other folders)
