[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberneticagents"
version = "0.1.0"
description = "CyberneticAgents CLI and runtime."
requires-python = ">=3.10"
dependencies = [
  "autogen-agentchat==0.7.5",
  "autogen-core==0.7.5",
  "autogen-ext[docker,chromadb]==0.7.5",
  "casbin==1.43.0",
  "casbin_sqlalchemy_adapter==1.4.0",
  "SQLAlchemy==2.0.45",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp-proto-http",
  "opentelemetry-instrumentation-openai",
  "traceloop-sdk",
  "pre-commit==4.5.1",
  "pylint==3.3.3",
  "black==26.1.0",
  "langfuse",
  "python-dotenv",
  "tiktoken",
  "PyYAML>=6.0",
  "keyring>=24.0",
  "pytest-asyncio",
  "requests",
  "qrcode",
  "streamlit",
]

[project.scripts]
cyberagent = "src.cyberagent.cli.cyberagent:main"

[project.optional-dependencies]
dev = [
  "ruff",
  "basedpyright",
]

[tool.basedpyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
exclude = [
  "**/__pycache__",
  "**/*.py[cod]",
  "**/*.so",
  ".Python",
  ".pytest_db",
  ".venv",
  "venv",
  "data/last_team.json",
  "logs",
  "docker_cli_executor",
  "env",
  "ENV",
  ".env",
  ".env.local",
  ".env.*.local",
  ".vscode",
  ".idea",
  "**/*.swp",
  "**/*.swo",
  "**/*~",
  ".DS_Store",
  ".pytest_cache",
  ".coverage",
  "htmlcov",
  ".tox",
  ".hypothesis",
  "coverage.xml",
  "**/*.cover",
  ".mypy_cache",
  ".dmypy.json",
  "dmypy.json",
  ".pyre",
  ".pytype",
  "build",
  "dist",
  "**/*.egg-info",
  "**/*.egg",
  ".eggs",
  "docs/_build",
  "site",
  "data/*.db",
  "data/*.db-shm",
  "data/*.db-wal",
  "**/*.db-journal",
  ".ipynb_checkpoints",
  "**/*.ipynb",
  "pip-log.txt",
  "pip-delete-this-directory.txt",
  ".ruff_cache",
  ".pre-commit-cache",
]

[tool.pytest.ini_options]
norecursedirs = [
  ".pre-commit-cache",
  ".pytest_db",
  "data",
  "logs",
]
markers = [
  "docker: tests that require Docker to run",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.setuptools.package-data]
"src.cyberagent.cli" = ["messages.json"]
